--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -1,25 +1,3 @@
-[koji-foreman]
+[koji-katello]
 releaser = tito.release.KojiReleaser
-autobuild_tags = foreman-nightly-nonscl-rhel6 foreman-nightly-nonscl-rhel7 foreman-nightly-fedora19 foreman-nightly-rhel6 foreman-nightly-rhel7
-
-# Temporary, works around tito bug with SCL builders when building a package
-# that's SCL-only (no F19 or non-SCL)
-[koji-foreman-rhel7]
-releaser = tito.release.KojiReleaser
-autobuild_tags = foreman-nightly-rhel7
-
-[koji-foreman-nightly]
-releaser = tito.release.KojiReleaser
-autobuild_tags = foreman-nightly-nonscl-rhel6 foreman-nightly-nonscl-rhel7 foreman-nightly-fedora19 foreman-nightly-rhel6 foreman-nightly-rhel7
-builder = tito.builder.FetchBuilder
-builder.jenkins_url = http://ci.theforeman.org
-
-[koji-foreman-plugins]
-releaser = tito.release.KojiReleaser
-autobuild_tags = foreman-plugins-nightly-fedora19 foreman-plugins-nightly-rhel6 foreman-plugins-nightly-rhel7
-
-# Temporary, works around tito bug with SCL builders when building a package
-# that's SCL-only (no F19 or non-SCL)
-[koji-foreman-plugins-rhel7]
-releaser = tito.release.KojiReleaser
-autobuild_tags = foreman-plugins-nightly-rhel7
+autobuild_tags = katello-nightly-nonscl-rhel5 katello-nightly-nonscl-rhel6 katello-nightly-nonscl-rhel7 katello-nightly-rhel6 katello-nightly-rhel7
