--- a/rel-eng/tito.props
+++ b/rel-eng/tito.props
@@ -1,7 +1,7 @@
 # vim: ts=2:sw=2:et
 #
 # Please keep blacklist/whitelist sorted
-#
+
 
 [buildconfig]
 builder = tito.builder.GitAnnexBuilder
@@ -13,402 +13,31 @@ fetch_strategy = custom.JenkinsSourceStrategy
 
 # Blacklist any non-SCL packages that are missing SCL macros or they get built
 # in the SCL tag rather than -nonscl.  Don't forget -rhel7 below too!
-[foreman-nightly-rhel6]
+[katello-nightly-rhel6]
 disttag = .el6
-blacklist = foreman-installer
-  foreman-proxy
-  foreman-release-scl
-  foreman-selinux
-  rubygem-clamp
-  rubygem-hammer_cli
-  rubygem-hammer_cli_foreman
-  rubygem-little-plugger
-  rubygem-powerbar
-  rubygem-rack-protection
-  rubygem-rb-readline
-  rubygem-rkerberos
-  rubygem-sinatra
-  rubygem-table_print
-  rubygem-terminal-table
-  rubygem-tilt
+blacklist = 
 scl = ruby193
 
-[foreman-nightly-rhel7]
+[katello-nightly-rhel7]
 disttag = .el7
-blacklist = foreman-installer
-  foreman-proxy
-  foreman-release-scl
-  foreman-selinux
-  rubygem-clamp
-  rubygem-hammer_cli
-  rubygem-hammer_cli_foreman
-  rubygem-little-plugger
-  rubygem-powerbar
-  rubygem-rack-protection
-  rubygem-rb-readline
-  rubygem-rkerberos
-  rubygem-sinatra
-  rubygem-table_print
-  rubygem-terminal-table
-  rubygem-tilt
+blacklist = 
 scl = ruby193
 
 # Only whitelist packages that must be non-SCL, e.g. proxy, or CLI related
 #
 # Is your package *only* non-SCL?  If so, add it to the blacklist above or it
 # will get built in the wrong tag.
-[foreman-nightly-nonscl-rhel6]
+[katello-nightly-nonscl-rhel5]
+disttag = .el5
+whitelist =
+
+[katello-nightly-nonscl-rhel6]
 disttag = .el6
-whitelist = foreman-installer
-  foreman-proxy
-  foreman-release-scl
-  foreman-selinux
-  rubygem-apipie-bindings
-  rubygem-awesome_print
-  rubygem-bundler_ext
-  rubygem-clamp
-  rubygem-daemon_controller
-  rubygem-fast_gettext
-  rubygem-foreman_api
-  rubygem-hammer_cli
-  rubygem-hammer_cli_foreman
-  rubygem-hashie
-  rubygem-highline
-  rubygem-librarian-puppet
-  rubygem-little-plugger
-  rubygem-logging
-  rubygem-multi_json
-  rubygem-netrc
-  rubygem-oauth
-  rubygem-passenger
-  rubygem-powerbar
-  rubygem-rb-readline
-  rubygem-rdoc
-  rubygem-rest-client
-  rubygem-rkerberos
-  rubygem-rubyipmi
-  rubygem-table_print
-  rubygem-terminal-table
-  rubygem-thor
+whitelist =
 
-[foreman-nightly-nonscl-rhel7]
+[katello-nightly-nonscl-rhel7]
 disttag = .el7
-whitelist = foreman-installer
-  foreman-proxy
-  foreman-release-scl
-  foreman-selinux
-  rubygem-apipie-bindings
-  rubygem-awesome_print
-  rubygem-bundler_ext
-  rubygem-clamp
-  rubygem-fast_gettext
-  rubygem-fastercsv
-  rubygem-foreman_api
-  rubygem-hammer_cli
-  rubygem-hammer_cli_foreman
-  rubygem-hashie
-  rubygem-highline
-  rubygem-little-plugger
-  rubygem-locale
-  rubygem-logging
-  rubygem-multi_json
-  rubygem-netrc
-  rubygem-oauth
-  rubygem-passenger
-  rubygem-powerbar
-  rubygem-rack-protection
-  rubygem-rb-readline
-  rubygem-rest-client
-  rubygem-rkerberos
-  rubygem-rubyipmi
-  rubygem-sinatra
-  rubygem-table_print
-  rubygem-tilt
-
-[foreman-nightly-fedora19]
-disttag = .fc19
-whitelist = foreman
-  foreman-installer
-  foreman-proxy
-  foreman-selinux
-  rubygem-apipie-rails
-  rubygem-ansi
-  rubygem-apipie-bindings
-  rubygem-autoparse
-  rubygem-bootstrap-sass
-  rubygem-bundler_ext
-  rubygem-clamp
-  rubygem-deep_cloneable
-  rubygem-excon
-  rubygem-extlib
-  rubygem-faraday
-  rubygem-flot-rails
-  rubygem-fog
-  rubygem-fog-aws
-  rubygem-fog-core
-  rubygem-fog-json
-  rubygem-fog-xml
-  rubygem-foremancli
-  rubygem-foreman_api
-  rubygem-fast_gettext
-  rubygem-fastercsv
-  rubygem-friendly_id
-  rubygem-gettext_i18n_rails
-  rubygem-gettext_i18n_rails_js
-  rubygem-google-api-client
-  rubygem-gridster-rails
-  rubygem-hammer_cli
-  rubygem-hammer_cli_foreman
-  rubygem-highline
-  rubygem-hirb
-  rubygem-hirb-unicode
-  rubygem-jquery_pwstrength_bootstrap
-  rubygem-jquery-turbolinks
-  rubygem-jquery-ui-rails
-  rubygem-jwt
-  rubygem-launchy
-  rubygem-ldap_fluff
-  rubygem-librarian-puppet
-  rubygem-multi_json
-  rubygem-multi-select-rails
-  rubygem-mysql
-  rubygem-mysql2
-  rubygem-net-scp
-  rubygem-po_to_json
-  rubygem-powerbar
-  rubygem-quiet_assets
-  rubygem-rabl
-  rubygem-rack-jsonp
-  rubygem-rb-readline
-  rubygem-rbvmomi
-  rubygem-rbovirt
-  rubygem-retriable
-  rubygem-ruby2ruby
-  rubygem-ruby_parser
-  rubygem-rubyipmi
-  rubygem-safemode
-  rubygem-secure_headers
-  rubygem-sexp_processor
-  rubygem-signet
-  rubygem-spice-html5-rails
-  rubygem-strong_parameters
-  rubygem-table_print
-  rubygem-terminal-table
-  rubygem-therubyracer
-  rubygem-turbolinks
-  rubygem-unicode-display_width
-  rubygem-validates_lengths_from_database
-
-[foreman-plugins-nightly-rhel6]
-disttag = .el6
-scl = ruby193
-whitelist = ipxe
-  rubygem-algebrick
-  rubygem-angular-rails-templates
-  rubygem-apipie-params
-  rubygem-archive-tar-minitar
-  rubygem-bastion
-  rubygem-commonjs
-  rubygem-dalli
-  rubygem-deface
-  rubygem-diffy
-  rubygem-docker-api
-  rubygem-dynflow
-  rubygem-ffi
-  rubygem-git
-  rubygem-jgrep
-  rubygem-openscap
-  rubygem-opennebula
-  rubygem-foreman_abrt
-  rubygem-foreman_bootdisk
-  rubygem-foreman_chef
-  rubygem-foreman_column_view
-  rubygem-foreman_content
-  rubygem-foreman_custom_parameters
-  rubygem-foreman_default_hostgroup
-  rubygem-foreman_dhcp_browser
-  rubygem-foreman_digitalocean
-  rubygem-foreman_discovery
-  rubygem-foreman_docker
-  rubygem-foreman_graphite
-  rubygem-foreman_hooks
-  rubygem-foreman_host_rundeck
-  rubygem-foreman-mco
-  rubygem-foreman_memcache
-  rubygem-foreman_one
-  rubygem-foreman_openscap
-  rubygem-foreman_openstack_cluster
-  rubygem-foreman_param_lookup
-  rubygem-foreman_reserve
-  rubygem-foreman_salt
-  rubygem-foreman_scap_client
-  rubygem-foreman_setup
-  rubygem-foreman_simplify
-  rubygem-foreman_snapshot
-  rubygem-foreman-tasks
-  rubygem-foreman_xen
-  rubygem-graphite-api
-  rubygem-hammer_cli_foreman_bootdisk
-  rubygem-hammer_cli_foreman_discovery
-  rubygem-hammer_cli_foreman_docker
-  rubygem-hammer_cli_foreman_salt
-  rubygem-hammer_cli_foreman_tasks
-  rubygem-less
-  rubygem-less-rails
-  rubygem-little-plugger
-  rubygem-foreman_templates
-  rubygem-ovirt_provision_plugin
-  rubygem-puppetdb_foreman
-  rubygem-satyr
-  rubygem-scaptimony
-  rubygem-smart_proxy_abrt
-  rubygem-smart_proxy_discovery
-  rubygem-smart_proxy_openscap
-  rubygem-smart_proxy_pulp
-  rubygem-smart_proxy_salt
-  rubygem-wicked
-  rubygem-zscheduler
-
-[foreman-plugins-nightly-rhel7]
-disttag = .el7
-scl = ruby193
-whitelist = rubygem-algebrick
-  rubygem-angular-rails-templates
-  rubygem-apipie-params
-  rubygem-archive-tar-minitar
-  rubygem-bastion
-  rubygem-chef-api
-  rubygem-commonjs
-  rubygem-dalli
-  rubygem-deface
-  rubygem-diffy
-  rubygem-docker-api
-  rubygem-dynflow
-  rubygem-ffi
-  rubygem-git
-  rubygem-jgrep
-  rubygem-openscap
-  rubygem-opennebula
-  rubygem-foreman_abrt
-  rubygem-foreman_bootdisk
-  rubygem-foreman_chef
-  rubygem-foreman_column_view
-  rubygem-foreman_content
-  rubygem-foreman_custom_parameters
-  rubygem-foreman_default_hostgroup
-  rubygem-foreman_dhcp_browser
-  rubygem-foreman_digitalocean
-  rubygem-foreman_discovery
-  rubygem-foreman_docker
-  rubygem-foreman_graphite
-  rubygem-foreman_hooks
-  rubygem-foreman_host_rundeck
-  rubygem-foreman-mco
-  rubygem-foreman_memcache
-  rubygem-foreman_one
-  rubygem-foreman_openscap
-  rubygem-foreman_openstack_cluster
-  rubygem-foreman_param_lookup
-  rubygem-foreman_reserve
-  rubygem-foreman_salt
-  rubygem-foreman_scap_client
-  rubygem-foreman_setup
-  rubygem-foreman_simplify
-  rubygem-foreman_snapshot
-  rubygem-foreman-tasks
-  rubygem-foreman_xen
-  rubygem-foreman_templates
-  rubygem-graphite-api
-  rubygem-hammer_cli_foreman_bootdisk
-  rubygem-hammer_cli_foreman_discovery
-  rubygem-hammer_cli_foreman_docker
-  rubygem-hammer_cli_foreman_salt
-  rubygem-hammer_cli_foreman_ssh
-  rubygem-hammer_cli_foreman_tasks
-  rubygem-less
-  rubygem-less-rails
-  rubygem-little-plugger
-  rubygem-logify
-  rubygem-ovirt_provision_plugin
-  rubygem-puppetdb_foreman
-  rubygem-satyr
-  rubygem-scaptimony
-  rubygem-smart_proxy_abrt
-  rubygem-smart_proxy_discovery
-  rubygem-smart_proxy_chef
-  rubygem-smart_proxy_openscap
-  rubygem-smart_proxy_pulp
-  rubygem-smart_proxy_salt
-  rubygem-wicked
-  rubygem-zscheduler
-
-[foreman-plugins-nightly-fedora19]
-disttag = .fc19
-whitelist = rubygem-algebrick
-  rubygem-angular-rails-templates
-  rubygem-apipie-params
-  rubygem-chef-api
-  rubygem-bastion
-  rubygem-commonjs
-  rubygem-dalli
-  rubygem-deface
-  rubygem-diffy
-  rubygem-docker-api
-  rubygem-dynflow
-  rubygem-jgrep
-  rubygem-opennebula
-  rubygem-openscap
-  rubygem-foreman_abrt
-  rubygem-foreman_bootdisk
-  rubygem-foreman_chef
-  rubygem-foreman_column_view
-  rubygem-foreman_content
-  rubygem-foreman_custom_parameters
-  rubygem-foreman_default_hostgroup
-  rubygem-foreman_dhcp_browser
-  rubygem-foreman_digitalocean
-  rubygem-foreman_discovery
-  rubygem-foreman_docker
-  rubygem-foreman_graphite
-  rubygem-foreman_hooks
-  rubygem-foreman_host_rundeck
-  rubygem-foreman-mco
-  rubygem-foreman_memcache
-  rubygem-foreman_one
-  rubygem-foreman_openscap
-  rubygem-foreman_openstack_cluster
-  rubygem-foreman_param_lookup
-  rubygem-foreman_reserve
-  rubygem-foreman_salt
-  rubygem-foreman_scap_client
-  rubygem-foreman_setup
-  rubygem-foreman_simplify
-  rubygem-foreman_snapshot
-  rubygem-foreman_templates
-  rubygem-foreman-tasks
-  rubygem-foreman_xen
-  rubygem-graphite-api
-  rubygem-hammer_cli_foreman_bootdisk
-  rubygem-hammer_cli_foreman_discovery
-  rubygem-hammer_cli_foreman_docker
-  rubygem-hammer_cli_foreman_salt
-  rubygem-hammer_cli_foreman_ssh
-  rubygem-hammer_cli_foreman_tasks
-  rubygem-less
-  rubygem-less-rails
-  rubygem-logify
-  rubygem-ovirt_provision_plugin
-  rubygem-puppetdb_foreman
-  rubygem-satyr
-  rubygem-scaptimony
-  rubygem-smart_proxy_abrt
-  rubygem-smart_proxy_discovery
-  rubygem-smart_proxy_chef
-  rubygem-smart_proxy_openscap
-  rubygem-smart_proxy_pulp
-  rubygem-smart_proxy_salt
-  rubygem-wicked
-  rubygem-zscheduler
+whitelist =
 
 [requirements]
 tito=0.5.6
